   - nth_integer_root!/2 -> val
  - reduced_prime_factors/1
 - new module Chunky.Math.Predicates
 - refactored all functions of form `is_*?/1` from Chunky.Math to Chunky.Math.Predicates
 - Math.Predicates
  - is_singly_even_number?/1
  - is_doubly_even_number?/1
  - is_economical_number?/1
  - is_wasteful_number?/1
  - is_equidigital_number?/1
  

### Sequences

 - A016825 - Positive integers congruent to 2 mod 4
 - A046759 - Economical numbers
 - A046760 - Wasteful numbers
 - A046758 - Equidigital numbers

 
 

## v0.11.5

```
OEIS Coverage
        703 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Combinatorics - 7 sequences
        Elixir.Chunky.Sequence.OEIS.Constants - 31 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 136 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 119 sequences
        Elixir.Chunky.Sequence.OEIS.Multiples - 60 sequences
        Elixir.Chunky.Sequence.OEIS.Powers - 47 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 100 sequences
        Elixir.Chunky.Sequence.OEIS.Repr - 182 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 135 / 177 (76.27%)
        OEIS Core::Easy Sequences - 121 / 146 (82.88%)
        OEIS Core::Hard Sequences - 12 / 12 (100.0%)
        OEIS Core::Multiplicative Sequences - 22 / 22 (100.0%)
        OEIS Core::Eigen Sequences - 5 / 5 (100.0%)
```

 - Math
  - double_factorial/1
  - repunit/1
  - stern_diatomic_series/1
  - n_choose_k/2
  - stirling_partition_number/2
  - schroder_number/1
  - chebyshev_triangle_coefficient/2
  - bernoulli_number/1
  - two_color_bracelet_with_period_count/2
  - two_color_bracelet_count/2
  - binary_partitions_count/1
  - nth_root_int/2
  - total_partitions/1
  - ordered_factorization_count/1
  - is_repunit?/1
  - is_repdigit?/1
  - is_cyclops_number_in_base?/2
  - is_cyclops_number?/1
  - perfect_partition_count/1
  - digit_runs/2